### Remove some useless print (HEAD -> main)
>Fri, 10 Mar 2023 11:32:01 +0100

>Author: Jean-Christophe Malapert (Jean-christophe.malapert@cnes.fr)

>Commiter: Jean-Christophe Malapert (Jean-christophe.malapert@cnes.fr)




### Fix bug when not volums_desc_url (origin/main)
>Fri, 10 Mar 2023 11:29:13 +0100

>Author: Jean-Christophe Malapert (Jean-christophe.malapert@cnes.fr)

>Commiter: Jean-Christophe Malapert (Jean-christophe.malapert@cnes.fr)




### Add some logs Fix possible bugs
>Fri, 10 Mar 2023 10:58:38 +0100

>Author: Jean-Christophe Malapert (Jean-christophe.malapert@cnes.fr)

>Commiter: Jean-Christophe Malapert (Jean-christophe.malapert@cnes.fr)




### Change planet parameter to body since we manage the Moon Use a mean to extract a sample of records
>Thu, 9 Mar 2023 03:57:31 +0100

>Author: Jean-Christophe Malapert (Jean-christophe.malapert@cnes.fr)

>Commiter: Jean-Christophe Malapert (Jean-christophe.malapert@cnes.fr)




### Add progress_bar as option
>Wed, 8 Mar 2023 01:46:05 +0100

>Author: Jean-Christophe Malapert (Jean-christophe.malapert@cnes.fr)

>Commiter: Jean-Christophe Malapert (Jean-christophe.malapert@cnes.fr)




### Update deploy.yml
>Mon, 6 Mar 2023 09:05:33 +0100

>Author: Jean-Christophe Malapert (jcmalapert@googlemail.com)

>Commiter: GitHub (noreply@github.com)




### Update deploy.yml
>Mon, 6 Mar 2023 09:01:56 +0100

>Author: Jean-Christophe Malapert (jcmalapert@googlemail.com)

>Commiter: GitHub (noreply@github.com)

Add plantuml to build UML diagram


### Fix bug in packaging
>Tue, 28 Feb 2023 13:30:23 +0100

>Author: Jean-Christophe Malapert (Jean-christophe.malapert@cnes.fr)

>Commiter: Jean-Christophe Malapert (Jean-christophe.malapert@cnes.fr)




### Change make to make user to install the package in the local directory
>Tue, 28 Feb 2023 12:27:17 +0100

>Author: Jean-Christophe Malapert (Jean-christophe.malapert@cnes.fr)

>Commiter: Jean-Christophe Malapert (Jean-christophe.malapert@cnes.fr)



