@@ -1,4 +1,14 @@
-### Remove some useless print (HEAD -> main)
+### Add code to follow the redirection of a request (HEAD -> main)
+>Fri, 10 Mar 2023 14:37:35 +0100
+
+>Author: Jean-Christophe Malapert (Jean-christophe.malapert@cnes.fr)
+
+>Commiter: Jean-Christophe Malapert (Jean-christophe.malapert@cnes.fr)
+
+
+
+
+### Remove some useless print (origin/main)
 >Fri, 10 Mar 2023 11:32:01 +0100
 
 >Author: Jean-Christophe Malapert (Jean-christophe.malapert@cnes.fr)
@@ -8,7 +18,7 @@
 
 
 
-### Fix bug when not volums_desc_url (origin/main)
+### Fix bug when not volums_desc_url
 >Fri, 10 Mar 2023 11:29:13 +0100
 
 >Author: Jean-Christophe Malapert (Jean-christophe.malapert@cnes.fr)
